--- a/src/run_config_layerwise.yaml
+++ b/src/run_config_layerwise.yaml
@@ -6,10 +6,10 @@ dataset:
     subset: pretrained
     target_layer: conv
     is_model_wise: False
-    validation_split: False
+    validation_split: 0.2
     test_split: 0.2
 
-model_class: polynomial_regression # Needs to be set manually
+model_class: GRN # Needs to be set manually
 
 polynomial_regression:
   module: src.models.polynomial_regression
@@ -17,17 +17,27 @@ polynomial_regression:
   params:
     degree: 3
 
-mlp_layerwise:
+ResidualMLP:
   module: src.models.mlp_layerwise
-  class: mlp_layerwise
+  class: ResidualMLP
   params:
-    batch_size: 64,
-    num_epochs: 5000,
-    loss: mse, # init_params must include loss!
-    lr: 0.0001,
-    n_features: 5, # Can be set inside the main or given as hard-coded.
-    num_epochs_overfit: 3000,
-    activation: relu
+    batch_size: 64
+    num_epochs: 5000
+    loss: mse
+    lr: 0.0001
+    n_features: 5 # TODO: Needs to be set manually!
+    num_epochs_overfit: 3000
+
+GRN:
+  module: src.models.mlp_layerwise
+  class: GRN
+  params:
+    batch_size: 64
+    num_epochs: 5000
+    loss: mse
+    lr: 0.0001
+    n_features: 5 # TODO: Needs to be set manually!
+    num_epochs_overfit: 3000
 
 evaluation:
   module: src.models.metrics
