--- a/src/run_config_layerwise.yaml
+++ b/src/run_config_layerwise.yaml
@@ -27,7 +27,6 @@ LayerWiseDatasetv2Small:
     dataset_path_raw_y: /home/denizkorkmaz/PycharmProjects/TUM/SS22/green-ml-daml/src/LayerWiseDatasetv2Small-pretrained-raw_y.pkl
     dataset_path_y_modelwise: /home/denizkorkmaz/PycharmProjects/TUM/SS22/green-ml-daml/src/LayerWiseDatasetv2Small-pretrained-y_modelwise.pkl
 
-<<<<<<< src/run_config_layerwise.yaml
 LayerWiseDatasetv2Large:
   module: src.dataset.data.dataset
   class: LayerWiseDatasetv2Large
@@ -57,10 +56,9 @@ ModelWiseDataset:
     test_split: 0.2
 
 
-model_class: GRN # TODO: Needs to be set manually to the key for the model.
->>>>>>> src/run_config_layerwise.yaml
+model_class: PolynomialRegression # TODO: Needs to be set manually to the key for the model.
 
-polynomial_regression: # Here key for the model is polynomial_regression.
+PolynomialRegression: # Here key for the model is polynomial_regression.
   module: src.models.polynomial_regression
   class: PolynomialRegression # The explicit name of the model class.
   params:
